go-demo/3-mysql-deployment-clone.yaml
apiVersion: v1 
kind: Service
metadata:
  name: gowebapp-mysql-clone 
  labels:
    run: gowebapp-mysql
    tier: backend 
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306 
  selector:
    run: gowebapp-mysql-clone
    tier: backend
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: gowebapp-mysql-clone 
  labels:
    run: gowebapp-mysql
    tier: backend 
spec:
  replicas: 1 
  strategy:
    type: Recreate 
  selector:
    matchLabels:
      run: gowebapp-mysql 
      tier: backend
  template: 
    metadata: 
      labels:
        run: gowebapp-mysql
        tier: backend 
    spec:
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: mysql-claim-clone
      containers:
      - name: gowebapp-mysql-clone 
        image: jowings/gowebapp-mysql:0.3
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: data
          mountPath: "/var/lib/mysql"
