go-demo/2-gowebapp-deployment-pvc.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: gowebapp 
  labels:
    run: gowebapp
    tier: frontend 
spec:
  type: ClusterIP
  ports:
  - port: 80 
  selector:
    run: gowebapp
    tier: frontend
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
   name: gowebapp
   labels:
     run: gowebapp
     tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      run: gowebapp
      tier: frontend
  template: 
    metadata:
      labels:
        run: gowebapp
        tier: frontend 
    spec:
      containers:
      - name: gowebapp
        image: jowings/gowebapp:0.3
        ports:
        - containerPort: 80

---

kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: goweb-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`go.dev.fsa.lab`)
    kind: Rule
    services:
    - name: gowebapp
      port: 80
