go-demo/4-gowebapp-deployment-clone.yaml
apiVersion: v1 
kind: Service 
metadata:
  name: gowebapp-clone 
  labels:
    run: gowebapp-clone
    tier: frontend 
spec:
  type: ClusterIP
  ports:
  - port: 80 
  selector:
    run: gowebapp-clone
    tier: frontend
---
apiVersion: apps/v1 
kind: Deployment 
metadata:
   name: gowebapp-clone
   labels:
     run: gowebapp-clone
     tier: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      run: gowebapp-clone
      tier: frontend
  template: 
    metadata:
      labels:
        run: gowebapp-clone
        tier: frontend 
    spec:
      containers:
      - name: gowebapp-clone
        image: jowings/gowebapp:0.3
        ports:
        - containerPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: clone-goweb-ingress
spec:
  rules:
  - host: clone.dev.fsa.lab
    http:
      paths:
      - path: /
        backend:
          serviceName: gowebapp-clone
          servicePort: 80
