go-demo/clone-demo-ingress.yaml
# This is already included in the 4-gowebapp-deployment-clone.yaml but broken out for reference

kind: IngressRoute
apiVersion: traefik.containo.us/v1alpha1
metadata:
  name: clone-goweb-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`clone-go.dev.fsa.lab`)
    kind: Rule
    services:
    - name: gowebapp-clone
      port: 80
